database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  selector:
    matchLabels:
      app: database
  replicas: 1
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - image: docker.io/library/mariadb
        imagePullPolicy: Always
        name: database
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: database-volume
      restartPolicy: Always
      volumes:
      - name: database-volume
        persistentVolumeClaim:
          claimName: database
