api-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: bikepacker.local
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: http
        path: /
        pathType: ImplementationSpecific
